# rs-agent

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md
examples/: memory_checkpoint.rs  multi_agent.rs  quickstart.rs  tool_catalog.rs  utcp_integration.rs
examples/utcp_tools/: echo.py  tools.json
src/: agent.rs  agent_orchestrators.rs  agent_tool.rs  catalog.rs  error.rs  helpers.rs  lib.rs  query.rs  types.rs  utcp.rs
src/agent/: codemode.rs  mod.rs  utcp.rs
src/memory/: mod.rs  mongodb.rs  postgres.rs  qdrant.rs
src/models/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/tools/: mod.rs
